--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies only
+# dependencies only ban
 /node_modules
 /.pnp
 .pnp.*
